[package]
name = "UpSurge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssh = "0.9.9"
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = "0.3.26"
tokio = "1.26.0"
getopts = "0.2.21"
regex = "1.7.1"
